@@ -2148,6 +2148,32 @@ argument_list|(
 literal|"end"
 argument_list|)
 decl_stmt|;
+name|Number
+name|before
+init|=
+operator|(
+name|Number
+operator|)
+name|values
+operator|.
+name|get
+argument_list|(
+literal|"before"
+argument_list|)
+decl_stmt|;
+name|Number
+name|after
+init|=
+operator|(
+name|Number
+operator|)
+name|values
+operator|.
+name|get
+argument_list|(
+literal|"after"
+argument_list|)
+decl_stmt|;
 name|rangeFacet
 operator|=
 operator|new
@@ -2165,6 +2191,10 @@ argument_list|,
 name|end
 argument_list|,
 name|gap
+argument_list|,
+name|before
+argument_list|,
+name|after
 argument_list|)
 expr_stmt|;
 block|}
@@ -2204,6 +2234,32 @@ argument_list|(
 literal|"end"
 argument_list|)
 decl_stmt|;
+name|Number
+name|before
+init|=
+operator|(
+name|Number
+operator|)
+name|values
+operator|.
+name|get
+argument_list|(
+literal|"before"
+argument_list|)
+decl_stmt|;
+name|Number
+name|after
+init|=
+operator|(
+name|Number
+operator|)
+name|values
+operator|.
+name|get
+argument_list|(
+literal|"after"
+argument_list|)
+decl_stmt|;
 name|rangeFacet
 operator|=
 operator|new
@@ -2221,6 +2277,10 @@ argument_list|,
 name|end
 argument_list|,
 name|gap
+argument_list|,
+name|before
+argument_list|,
+name|after
 argument_list|)
 expr_stmt|;
 block|}
