@@ -96,6 +96,18 @@ specifier|final
 name|G
 name|gap
 decl_stmt|;
+DECL|field|before
+specifier|private
+specifier|final
+name|Number
+name|before
+decl_stmt|;
+DECL|field|after
+specifier|private
+specifier|final
+name|Number
+name|after
+decl_stmt|;
 DECL|method|RangeFacet
 specifier|protected
 name|RangeFacet
@@ -111,6 +123,12 @@ name|end
 parameter_list|,
 name|G
 name|gap
+parameter_list|,
+name|Number
+name|before
+parameter_list|,
+name|Number
+name|after
 parameter_list|)
 block|{
 name|this
@@ -136,6 +154,18 @@ operator|.
 name|gap
 operator|=
 name|gap
+expr_stmt|;
+name|this
+operator|.
+name|before
+operator|=
+name|before
+expr_stmt|;
+name|this
+operator|.
+name|after
+operator|=
+name|after
 expr_stmt|;
 block|}
 DECL|method|addCount
@@ -219,6 +249,26 @@ return|return
 name|gap
 return|;
 block|}
+DECL|method|getBefore
+specifier|public
+name|Number
+name|getBefore
+parameter_list|()
+block|{
+return|return
+name|before
+return|;
+block|}
+DECL|method|getAfter
+specifier|public
+name|Number
+name|getAfter
+parameter_list|()
+block|{
+return|return
+name|after
+return|;
+block|}
 DECL|class|Numeric
 specifier|public
 specifier|static
@@ -247,6 +297,12 @@ name|end
 parameter_list|,
 name|Number
 name|gap
+parameter_list|,
+name|Number
+name|before
+parameter_list|,
+name|Number
+name|after
 parameter_list|)
 block|{
 name|super
@@ -258,6 +314,10 @@ argument_list|,
 name|end
 argument_list|,
 name|gap
+argument_list|,
+name|before
+argument_list|,
+name|after
 argument_list|)
 expr_stmt|;
 block|}
@@ -302,6 +362,12 @@ name|end
 parameter_list|,
 name|String
 name|gap
+parameter_list|,
+name|Number
+name|before
+parameter_list|,
+name|Number
+name|after
 parameter_list|)
 block|{
 name|super
@@ -313,6 +379,10 @@ argument_list|,
 name|end
 argument_list|,
 name|gap
+argument_list|,
+name|before
+argument_list|,
+name|after
 argument_list|)
 expr_stmt|;
 block|}
