@@ -835,6 +835,26 @@ name|getCount
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|90
+argument_list|,
+name|manufacturedateDt
+operator|.
+name|getBefore
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|manufacturedateDt
+operator|.
+name|getAfter
+argument_list|()
+argument_list|)
+expr_stmt|;
 block|}
 annotation|@
 name|Test
